public enum CoachLevel {
    BEGINNER,
    SENIOR,
    EXPERT
}
