public enum Outcome {
    TEAM1,
    TEAM2,
    TIE
}
