public enum Position {
    ATTACKER,
    DEFENDER,
    GOALKEEPER
}
